# GachBoot

./: .codex  .gitignore  README.md  Readme  ai_feature_request_lightweight_uart_bootloader.md  firmware_signing_requirement.md
APP/Application/: .mxproject  Application.ioc  CMakeLists.txt  STM32H743XX_FLASH.ld
Boot/: .copilot-instructions.md  .gitignore  .mxproject  Boot.ioc  CMakeLists.txt  CMakePresets.json  Makefile  NVM_ARCHITECTURE.md  NVM_CODE_FLOW.md  README.md  STM32H743XX_FLASH.ld  mintool_config.json
Boot/.github/: copilot-instructions.md
Boot/AI_CONVERSATION/: CONVERSATION_HISTORY.md
Boot/GenerateCode/: CMakeLists.txt
Boot/Tool/: ARCHITECTURE.md  MinTool_modular.py  build_mintool.bat  mintool_config.json
Boot/bootloader/: CMakeLists.txt
Boot/bootloader/app/: bl_app_jump.c  bl_app_jump.h  bl_app_validate.c  bl_app_validate.h
Boot/bootloader/config/: bl_build_config.h  bl_config.h  bl_hw_config.h  bl_memory_map.h  bl_security_config.h
Boot/bootloader/core/: bl_boot.c  bl_boot.h  bl_main.c  bl_main.h  bl_session.c  bl_session.h  bl_state_machine.c  bl_state_machine.h  bl_types.h
Boot/bootloader/docs/: boot_entry_policy.md  bootloader_flow.md  firmware_package_and_signature_flow.md  flashing_protocol.md  memory_map.md  porting_guide.md  release_checklist.md  requirement_review.md  signature_key_injection.md  tool_development_notes.md
Boot/bootloader/log/: bl_log.c  bl_log.h
Boot/bootloader/memory/: bl_flash.c  bl_flash.h  bl_memory.c  bl_memory.h
Boot/bootloader/platform/: platform_boot_mode.c  platform_boot_mode.h  platform_flash.c  platform_flash.h  platform_reset.c  platform_reset.h  platform_uart.c  platform_uart.h
Boot/bootloader/protocol/: bl_command.c  bl_command.h  bl_frame.c  bl_frame.h  bl_protocol.c  bl_protocol.h
Boot/bootloader/security/: bl_checksum.c  bl_checksum.h  bl_signature.c  bl_signature.h
Boot/bootloader/tests/: test_frame.c
Boot/bootloader/tools/: generate_build_config.py  rsa_public_key_from_pem.py
Boot/bootloader/transport/: bl_transport.c  bl_transport.h  bl_uart_transport.c  bl_uart_transport.h
Boot/cmake/: starm-clang.cmake
Boot/components/dev_app/: CMakeLists.txt  dev_common.c  dev_delay_nonblocking.c  dev_log.c
Boot/components/dev_app/include/: dev_common.h  dev_delay_nonblocking.h  dev_log.h
Boot/components/dev_com/: CMakeLists.txt  dev_com.c  dev_min.c
Boot/components/dev_com/include/: dev_com.h  dev_min.h  dev_ringbuffer.h
Boot/components/dev_com_if/: CMakeLists.txt  dev_com_if.c
Boot/components/dev_com_if/include/: dev_com_if.h
Boot/components/dev_com_tp/: CMakeLists.txt  dev_com_tp.c
Boot/components/dev_com_tp/include/: dev_com_tp.h  dev_com_tp_cfg.h
Boot/components/dev_crc/: CMakeLists.txt  dev_crc.c
Boot/components/dev_crc/include/: dev_crc.h
Boot/components/dev_flashblock/: CMakeLists.txt  dev_flashblock.c
Boot/components/dev_flashblock/include/: dev_flashblock.h
Boot/components/dev_memstack/: CMakeLists.txt  README.md  dev_memstack.c  dev_memstack.h
Boot/components/dev_memstack/dev_fee/: CMakeLists.txt  Fee_Cfg.c  dev_fee.c
Boot/components/dev_memstack/dev_fee/include/: Fee_Cfg.h  dev_fee.h
Boot/components/dev_memstack/dev_fls/: CMakeLists.txt  Fls_Cfg.c  dev_fls.c
Boot/components/dev_memstack/dev_fls/include/: Fls_Cfg.h  dev_fls.h  dev_fls_config.h
Boot/components/dev_memstack/dev_memif/: CMakeLists.txt  dev_memif.c
Boot/components/dev_memstack/dev_nvm/: CMakeLists.txt  NVM_DESIGN.md  dev_nvm.c  dev_nvm_config.c
Boot/components/dev_memstack/dev_nvm/include/: dev_nvm.h  dev_nvm_config.h
Boot/components/dev_os/: CMakeLists.txt  dev_os.c
Boot/components/dev_os/include/: dev_os.h
Boot/components/dev_queue/: CMakeLists.txt  dev_queue.c
Boot/components/dev_queue/include/: dev_queue.h
Boot/components/dev_uart/: CMakeLists.txt  dev_ringbuffer.c  dev_uart.c
Boot/components/dev_uart/include/: dev_uart.h
Boot/service/svc_app/: CMakeLists.txt  svc_app.c
Boot/service/svc_app/include/: svc_app.h
Boot/service/svc_dcm/: CMakeLists.txt  dcm_did_access.c  dcm_did_access.h  dcm_service_access.c  dcm_service_access.h  svc_dcm.c
Boot/service/svc_dcm/dcmdsd/: dcmdsd.c  dcmdsd.h
Boot/service/svc_dcm/dcmdsl/: dcmdsl.c  dcmdsl.h
Boot/service/svc_dcm/dcmdsp/: dcmdsp.c  dcmdsp.h
Boot/service/svc_dcm/include/: svc_dcm.h
Boot/service/svc_dcm/uds_services/: uds_service_0x10.c  uds_service_0x10.h  uds_service_0x3E.c
Boot/service/svc_dcm/uds_services/service_0x10/: uds_service_0x10.c  uds_service_0x10.h
Boot/service/svc_dcm/uds_services/service_0x11/: uds_service_0x11.c  uds_service_0x11.h
Boot/service/svc_dcm/uds_services/service_0x22/: uds_rdbi_did_registry.c  uds_rdbi_did_registry.h  uds_service_0x22.c  uds_service_0x22.h
Boot/service/svc_dcm/uds_services/service_0x27/: uds_security_config.c  uds_security_config.h  uds_service_0x27.c  uds_service_0x27.h
Boot/service/svc_dcm/uds_services/service_0x2E/: uds_service_0x2E.c  uds_service_0x2E.h  uds_wdbi_did_registry.c  uds_wdbi_did_registry.h
Boot/service/svc_dcm/uds_services/service_0x31/: routine_callbacks.c  uds_routine_control_registry.c  uds_routine_control_registry.h  uds_service_0x31.c  uds_service_0x31.h
Boot/service/svc_dcm/uds_services/service_0x34/: uds_service_0x34.c  uds_service_0x34.h
Boot/service/svc_dcm/uds_services/service_0x36/: uds_service_0x36.c  uds_service_0x36.h
Boot/service/svc_dcm/uds_services/service_0x37/: uds_service_0x37.c  uds_service_0x37.h
Boot/service/svc_dcm/uds_services/service_0x3E/: uds_service_0x3E.c  uds_service_0x3E.h
Boot/service/svc_dcm/uds_services/service_did/: DID_PBCfg.c  DID_PBCfg.h  README.md  SERVICE_DID_SUMMARY.md  uds_did_callbacks.c  uds_did_callbacks.h  uds_did_registry.c  uds_did_registry.h
Boot/service/svc_dcm/uds_services/service_rid/: uds_rid_callback.c  uds_rid_callback.h
Tool/: automation.txt  mintool_config.json
Tool/firmware_signing_tool/: README.md  firmware_sign_tool.py  sign.sh
tool_ai_handover/: README.md  tool_ai_development_plan.md  tool_ai_flashing_flow.md  tool_ai_protocol_contract.md  tool_ai_requirements.md
(+134 files in other folders)
